--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,18 @@
                                         <target>${jdk.version}</target>
                                 </configuration>
                         </plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+				<url>http://localhost:8080/manager/text</url>
+				<server>TomcatServer</server>
+				<path>/webapps</path>
+				<username>admin</username>
+				<password>admin</password>
+				</configuration>
+			</plugin>
                         <plugin>
                                 <groupId>org.sonarsource.scanner.maven</groupId>
                                 <artifactId>sonar-maven-plugin</artifactId>
